tests/ui/suggestions/suggest-on-bare-closure-call.rs
//@ edition:2021

fn main() {
    let _ = ||{}();
    //~^ ERROR expected function, found `()`

    let _ = async ||{}();
    //~^ ERROR expected function, found `()`
}
